--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.1.2"
+    "axios": "^1.1.2",
+    "parse-duration": "^1.0.2"
   },
   "engines": {
     "node": "^16"
